<resources>
    <string name="app_name">Calculator</string>
    <string name="txtA">"A: "</string>
    <string name="txtB">"B: "</string>
    <string name="editA"></string>
    <string name="editB"></string>
    <string name="rdbCong">RadioButton</string>
    <string name="rdCong">+</string>
    <string name="rdTru">-</string>
    <string name="rdNhan">x</string>
    <string name="rdChia">÷</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnBang">=</string>
    <string name="btn0">0</string>
    <string name="btnAC">AC</string>
    <string name="btnExit">Exit</string>
    <string name="txtKQ">Result</string>
    <string name="txtResult" />
</resources>